# dingo-store

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci_cli_ubuntu.yml
cmake/: check_cli_help.cmake  tantivy-search.cmake
docs/: adapter_plan.md  build_dingodb_cli.md  output_redirect_fix_summary.md  output_truncation_analysis.md
src/client_v2/: cli_state.cc  cli_state.h  coordinator.cc  document_index.cc  help.cc  help.h  helper.h  interation.h  kv.cc  main.cc  meta.cc  pretty.cc  restore.cc  store.cc  tools.cc  vector_index.cc
src/common/: cli_options.cc  cli_options.h  tso.h  version.cc
src/coordinator/: coordinator_interaction.h
src/mvcc/: codec.cc
test/unit_test/: CMakeLists.txt
test/unit_test/client_v2/: CMakeLists.txt  test_pretty.cc
